[tool.poetry]
name = "redis-typesense-caching"
version = "0.1.0"
description = ""
authors = ["theodevmta <theofilus.arifin@mta.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
